--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
     <mat-sidenav mode="side" opened>
         <ul class='nav flex-column'>
             <li class="nav-item">
-                <a routerLink='/users'>Aria Users</a>
+                <a routerLink='/users'>User Access</a>
             </li>
             <li class="nav-item">
                 <a routerLink='/instorepricing'>In Store Pricing</a>
