--- a/src/app/aria-users/aria-users.component.html
+++ b/src/app/aria-users/aria-users.component.html
@@ -1,3 +1,105 @@
-<p>
-  aria-users works!
-</p>
+<div class='container'>
+    <h2>Store: </h2>
+    <div class="dropdown" dropdown>
+        <button dropdownToggle class="btn dropdown-toggle" type="button" id="dropdownMenuButton" aria-haspopup="true" aria-expanded="false">
+            121 - S/R Rochelle PK
+          </button>
+        <div *dropdownMenu class='dropdown-menu' aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item">118 - S/R Hoboken</a>
+            <a class="dropdown-item">607 - S/R Freehold</a>
+            <a class="dropdown-item">900 - Wakefern POS TEST</a>
+        </div>
+    </div>
+</div>
+<table class='table'>
+    <thead>
+        <tr>
+            <th scope='col'>User ID</th>
+            <th scope='col'>User Name</th>
+            <th scope='col'>Roles</th>
+            <th scope='col'>Function</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>CIMRS</td>
+            <td>Matt Scuteri</td>
+            <td>
+                <div class="dropdown" dropdown>
+                    <button dropdownToggle class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        ARIA COORDINATOR (FULL ACCESS)
+                    </button>
+                    <div *dropdownMenu class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item">ARIA COORDINATOR (FULL ACCESS)</a>
+                        <a class="dropdown-item">ARIA INQUIRE</a>
+                        <a class="dropdown-item">CISD DEVELOPMENT</a>
+                        <a class="dropdown-item">KIOSK APPS</a>
+                        <a class="dropdown-item">MEMBER</a>
+                        <a class="dropdown-item">STORE DEPARTMENT MANAGER</a>
+                    </div>
+                </div>
+            </td>
+            <td>IU</td>
+        </tr>
+        <tr>
+            <td>RTNSL</td>
+            <td>Nicholas LoPresti</td>
+            <td>
+                <div class="dropdown" dropdown>
+                    <button dropdownToggle class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        ARIA COORDINATOR (FULL ACCESS)
+                    </button>
+                    <div *dropdownMenu class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item">ARIA COORDINATOR (FULL ACCESS)</a>
+                        <a class="dropdown-item">ARIA INQUIRE</a>
+                        <a class="dropdown-item">CISD DEVELOPMENT</a>
+                        <a class="dropdown-item">KIOSK APPS</a>
+                        <a class="dropdown-item">MEMBER</a>
+                        <a class="dropdown-item">STORE DEPARTMENT MANAGER</a>
+                    </div>
+                </div>
+            </td>
+            <td>IU</td>
+        </tr>
+        <tr>
+            <td>BRM2B</td>
+            <td>Michele Bechtold</td>
+            <td>
+                <div class="dropdown" dropdown>
+                    <button dropdownToggle class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      ARIA INQUIRE
+                    </button>
+                    <div *dropdownMenu class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item">ARIA COORDINATOR (FULL ACCESS)</a>
+                        <a class="dropdown-item">ARIA INQUIRE</a>
+                        <a class="dropdown-item">CISD DEVELOPMENT</a>
+                        <a class="dropdown-item">KIOSK APPS</a>
+                        <a class="dropdown-item">MEMBER</a>
+                        <a class="dropdown-item">STORE DEPARTMENT MANAGER</a>
+                    </div>
+                </div>
+            </td>
+            <td>I</td>
+        </tr>
+        <tr>
+            <td>GGMMC</td>
+            <td>Michele M Cavalieri</td>
+            <td>
+                <div class="dropdown" dropdown>
+                    <button dropdownToggle class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      MEMBER
+                    </button>
+                    <div *dropdownMenu class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item">ARIA COORDINATOR (FULL ACCESS)</a>
+                        <a class="dropdown-item">ARIA INQUIRE</a>
+                        <a class="dropdown-item">CISD DEVELOPMENT</a>
+                        <a class="dropdown-item">KIOSK APPS</a>
+                        <a class="dropdown-item">MEMBER</a>
+                        <a class="dropdown-item">STORE DEPARTMENT MANAGER</a>
+                    </div>
+                </div>
+            </td>
+            <td>IU</td>
+        </tr>
+    </tbody>
+</table>
