--- a/src/app/aria-users/aria-users.component.html
+++ b/src/app/aria-users/aria-users.component.html
@@ -1,6 +1,6 @@
 <div class='container'>
     <h2>Store: </h2>
-    <div class="dropdown" dropdown>
+    <div class="dropdown store-num" dropdown>
         <button dropdownToggle class="btn dropdown-toggle" type="button" id="dropdownMenuButton" aria-haspopup="true" aria-expanded="false">
             121 - S/R Rochelle PK
           </button>
@@ -39,7 +39,11 @@
                     </div>
                 </div>
             </td>
-            <td>IU</td>
+            <td>
+                <button type="button" class="btn" (click)="openModal(template)">
+                FULL ACCESS
+              </button>
+            </td>
         </tr>
         <tr>
             <td>RTNSL</td>
@@ -59,7 +63,11 @@
                     </div>
                 </div>
             </td>
-            <td>IU</td>
+            <td>
+                <button type="button" class="btn" (click)="openModal(template)">
+                  FULL ACCESS
+                </button>
+            </td>
         </tr>
         <tr>
             <td>BRM2B</td>
@@ -79,7 +87,11 @@
                     </div>
                 </div>
             </td>
-            <td>I</td>
+            <td>
+                <button type="button" class="btn" (click)="openModal(template)">
+                  FULL ACCESS
+                </button>
+            </td>
         </tr>
         <tr>
             <td>GGMMC</td>
@@ -99,7 +111,59 @@
                     </div>
                 </div>
             </td>
-            <td>IU</td>
+            <td>
+                <button type="button" class="btn" (click)="openModal(template)">
+                  FULL ACCESS
+                </button>
+            </td>
         </tr>
     </tbody>
 </table>
+
+<ng-template #template>
+    <div class="modal-header">
+        <h4 class="modal-title">Function Codes</h4>
+        <button type="button" class="save" aria-label="Save" (click)="modalRef.hide()">Save</button>
+        <button type="button" class="close" aria-label="Close" (click)="modalRef.hide()">Close</button>
+    </div>
+    <div class="modal-body">
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox">
+            <label class="form-check-label">
+          Pricing Data
+        </label>
+            <input class="form-check-input" type="checkbox">
+            <label class="form-check-label">
+          Item Locator
+        </label>
+            <input class="form-check-input" type="checkbox">
+            <label class="form-check-label">
+          In Store Pricing
+        </label>
+            <input class="form-check-input" type="checkbox">
+            <label class="form-check-label">
+          Label Overrides
+        </label>
+            <input class="form-check-input" type="checkbox">
+            <label class="form-check-label">
+          Signs and Labels
+        </label>
+            <input class="form-check-input" type="checkbox">
+            <label class="form-check-label">
+          Item Comments
+        </label>
+            <input class="form-check-input" type="checkbox">
+            <label class="form-check-label">
+          Store List
+        </label>
+            <input class="form-check-input" type="checkbox">
+            <label class="form-check-label">
+          Reduction Label
+        </label>
+            <input class="form-check-input" type="checkbox">
+            <label class="form-check-label">
+          Out of Stock List
+        </label>
+        </div>
+    </div>
+</ng-template>
