--- a/src/app/aria-users/aria-users.component.html
+++ b/src/app/aria-users/aria-users.component.html
@@ -1,4 +1,4 @@
-<div class='container'>
+<div>
     <h2>Store: </h2>
     <div class="dropdown store-num" dropdown>
         <button dropdownToggle class="btn dropdown-toggle" type="button" id="dropdownMenuButton" aria-haspopup="true" aria-expanded="false">
@@ -112,58 +112,8 @@
                 </div>
             </td>
             <td>
-                <button type="button" class="btn" (click)="openModal(template)">
-                  FULL ACCESS
-                </button>
+                FULL ACCESS
             </td>
         </tr>
     </tbody>
 </table>
-
-<ng-template #template>
-    <div class="modal-header">
-        <h4 class="modal-title">Function Codes</h4>
-        <button type="button" class="save" aria-label="Save" (click)="modalRef.hide()">Save</button>
-        <button type="button" class="close" aria-label="Close" (click)="modalRef.hide()">Close</button>
-    </div>
-    <div class="modal-body">
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox">
-            <label class="form-check-label">
-          Pricing Data
-        </label>
-            <input class="form-check-input" type="checkbox">
-            <label class="form-check-label">
-          Item Locator
-        </label>
-            <input class="form-check-input" type="checkbox">
-            <label class="form-check-label">
-          In Store Pricing
-        </label>
-            <input class="form-check-input" type="checkbox">
-            <label class="form-check-label">
-          Label Overrides
-        </label>
-            <input class="form-check-input" type="checkbox">
-            <label class="form-check-label">
-          Signs and Labels
-        </label>
-            <input class="form-check-input" type="checkbox">
-            <label class="form-check-label">
-          Item Comments
-        </label>
-            <input class="form-check-input" type="checkbox">
-            <label class="form-check-label">
-          Store List
-        </label>
-            <input class="form-check-input" type="checkbox">
-            <label class="form-check-label">
-          Reduction Label
-        </label>
-            <input class="form-check-input" type="checkbox">
-            <label class="form-check-label">
-          Out of Stock List
-        </label>
-        </div>
-    </div>
-</ng-template>
