bootstrap stylings deleted

--- a/src/app/aria-users/aria-users.component.html
+++ b/src/app/aria-users/aria-users.component.html
@@ -1,10 +1,10 @@
 <div>
     <h2>Store: </h2>
-    <div class="dropdown store-num" dropdown>
-        <button dropdownToggle class="btn dropdown-toggle" type="button" id="dropdownMenuButton" aria-haspopup="true" aria-expanded="false">
+    <div class="dropdown store-num">
+        <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton">
             121 - S/R Rochelle PK
           </button>
-        <div *dropdownMenu class='dropdown-menu' aria-labelledby="dropdownMenuButton">
+        <div class='dropdown-menu' aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item">118 - S/R Hoboken</a>
             <a class="dropdown-item">607 - S/R Freehold</a>
             <a class="dropdown-item">900 - Wakefern POS TEST</a>
@@ -14,10 +14,10 @@
 <table class='table'>
     <thead>
         <tr>
-            <th scope='col'>User ID</th>
-            <th scope='col'>User Name</th>
-            <th scope='col'>Roles</th>
-            <th scope='col'>Function</th>
+            <th>User ID</th>
+            <th>User Name</th>
+            <th>Roles</th>
+            <th>Function</th>
         </tr>
     </thead>
     <tbody>
@@ -25,22 +25,22 @@
             <td>CIMRS</td>
             <td>Matt Scuteri</td>
             <td>
-                <div class="dropdown" dropdown>
-                    <button dropdownToggle class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <div class="dropdown">
+                    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton">
                         ARIA COORDINATOR (FULL ACCESS)
                     </button>
-                    <div *dropdownMenu class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <!-- <div class="dropdown-menu">
                         <a class="dropdown-item">ARIA COORDINATOR (FULL ACCESS)</a>
                         <a class="dropdown-item">ARIA INQUIRE</a>
                         <a class="dropdown-item">CISD DEVELOPMENT</a>
                         <a class="dropdown-item">KIOSK APPS</a>
                         <a class="dropdown-item">MEMBER</a>
                         <a class="dropdown-item">STORE DEPARTMENT MANAGER</a>
-                    </div>
+                    </div> -->
                 </div>
             </td>
             <td>
-                <button type="button" class="btn" (click)="openModal(template)">
+                <button type="button" class="btn">
                 FULL ACCESS
               </button>
             </td>
@@ -49,22 +49,22 @@
             <td>RTNSL</td>
             <td>Nicholas LoPresti</td>
             <td>
-                <div class="dropdown" dropdown>
-                    <button dropdownToggle class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <div class="dropdown">
+                    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton">
                         ARIA COORDINATOR (FULL ACCESS)
                     </button>
-                    <div *dropdownMenu class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <!-- <div class="dropdown-menu">
                         <a class="dropdown-item">ARIA COORDINATOR (FULL ACCESS)</a>
                         <a class="dropdown-item">ARIA INQUIRE</a>
                         <a class="dropdown-item">CISD DEVELOPMENT</a>
                         <a class="dropdown-item">KIOSK APPS</a>
                         <a class="dropdown-item">MEMBER</a>
                         <a class="dropdown-item">STORE DEPARTMENT MANAGER</a>
-                    </div>
+                    </div> -->
                 </div>
             </td>
             <td>
-                <button type="button" class="btn" (click)="openModal(template)">
+                <button type="button" class="btn">
                   FULL ACCESS
                 </button>
             </td>
@@ -73,22 +73,22 @@
             <td>BRM2B</td>
             <td>Michele Bechtold</td>
             <td>
-                <div class="dropdown" dropdown>
-                    <button dropdownToggle class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <div class="dropdown">
+                    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton">
                       ARIA INQUIRE
                     </button>
-                    <div *dropdownMenu class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <!-- <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item">ARIA COORDINATOR (FULL ACCESS)</a>
                         <a class="dropdown-item">ARIA INQUIRE</a>
                         <a class="dropdown-item">CISD DEVELOPMENT</a>
                         <a class="dropdown-item">KIOSK APPS</a>
                         <a class="dropdown-item">MEMBER</a>
                         <a class="dropdown-item">STORE DEPARTMENT MANAGER</a>
-                    </div>
+                    </div> -->
                 </div>
             </td>
             <td>
-                <button type="button" class="btn" (click)="openModal(template)">
+                <button type="button" class="btn">
                   FULL ACCESS
                 </button>
             </td>
@@ -98,17 +98,17 @@
             <td>Michele M Cavalieri</td>
             <td>
                 <div class="dropdown" dropdown>
-                    <button dropdownToggle class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton">
                       MEMBER
                     </button>
-                    <div *dropdownMenu class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <!-- <div *dropdownMenu class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item">ARIA COORDINATOR (FULL ACCESS)</a>
                         <a class="dropdown-item">ARIA INQUIRE</a>
                         <a class="dropdown-item">CISD DEVELOPMENT</a>
                         <a class="dropdown-item">KIOSK APPS</a>
                         <a class="dropdown-item">MEMBER</a>
                         <a class="dropdown-item">STORE DEPARTMENT MANAGER</a>
-                    </div>
+                    </div> -->
                 </div>
             </td>
             <td>
