--- a/src/app/aria-users/aria-users.component.html
+++ b/src/app/aria-users/aria-users.component.html
@@ -4,23 +4,34 @@
         <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton">
             121 - S/R Rochelle PK
           </button>
-        <div class='dropdown-menu' aria-labelledby="dropdownMenuButton">
+        <!-- <div class='dropdown-menu' aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item">118 - S/R Hoboken</a>
             <a class="dropdown-item">607 - S/R Freehold</a>
             <a class="dropdown-item">900 - Wakefern POS TEST</a>
-        </div>
+        </div> -->
     </div>
 </div>
-<table class='table'>
-    <thead>
-        <tr>
-            <th>User ID</th>
-            <th>User Name</th>
-            <th>Roles</th>
-            <th>Function</th>
-        </tr>
-    </thead>
-    <tbody>
+<table mat-table class='table' [dataSource]='dataSource' class='mat-elevation-z8'>
+    <ng-container matColumnDef='userID'>
+        <th mat-header-cell *matHeaderCellDef>User ID</th>
+        <td mat-cell *matCellDef='let element'>{{element.userID}}</td>
+    </ng-container>
+    <ng-container matColumnDef='userName'>
+        <th mat-header-cell *matHeaderCellDef>User Name</th>
+        <td mat-cell *matCellDef='let element'>{{element.userName}}</td>
+    </ng-container>
+    <ng-container matColumnDef='roles'>
+        <th mat-header-cell *matHeaderCellDef>Roles</th>
+        <td mat-cell *matCellDef='let element'>{{element.roles}}</td>
+    </ng-container>
+    <ng-container matColumnDef='function'>
+        <th mat-header-cell *matHeaderCellDef>Function</th>
+        <td mat-cell *matCellDef='let element'>{{element.function}}</td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
+    <tr mat-row *matRowDef='let row; columns: displayedColumns;'></tr>
+</table>
+<!-- <tbody>
         <tr>
             <td>CIMRS</td>
             <td>Matt Scuteri</td>
@@ -29,14 +40,14 @@
                     <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton">
                         ARIA COORDINATOR (FULL ACCESS)
                     </button>
-                    <!-- <div class="dropdown-menu">
+                 <div class="dropdown-menu">
                         <a class="dropdown-item">ARIA COORDINATOR (FULL ACCESS)</a>
                         <a class="dropdown-item">ARIA INQUIRE</a>
                         <a class="dropdown-item">CISD DEVELOPMENT</a>
                         <a class="dropdown-item">KIOSK APPS</a>
                         <a class="dropdown-item">MEMBER</a>
                         <a class="dropdown-item">STORE DEPARTMENT MANAGER</a>
-                    </div> -->
+                    </div>
                 </div>
             </td>
             <td>
@@ -53,14 +64,14 @@
                     <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton">
                         ARIA COORDINATOR (FULL ACCESS)
                     </button>
-                    <!-- <div class="dropdown-menu">
+                    <div class="dropdown-menu">
                         <a class="dropdown-item">ARIA COORDINATOR (FULL ACCESS)</a>
                         <a class="dropdown-item">ARIA INQUIRE</a>
                         <a class="dropdown-item">CISD DEVELOPMENT</a>
                         <a class="dropdown-item">KIOSK APPS</a>
                         <a class="dropdown-item">MEMBER</a>
                         <a class="dropdown-item">STORE DEPARTMENT MANAGER</a>
-                    </div> -->
+                    </div>
                 </div>
             </td>
             <td>
@@ -77,14 +88,14 @@
                     <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton">
                       ARIA INQUIRE
                     </button>
-                    <!-- <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item">ARIA COORDINATOR (FULL ACCESS)</a>
                         <a class="dropdown-item">ARIA INQUIRE</a>
                         <a class="dropdown-item">CISD DEVELOPMENT</a>
                         <a class="dropdown-item">KIOSK APPS</a>
                         <a class="dropdown-item">MEMBER</a>
                         <a class="dropdown-item">STORE DEPARTMENT MANAGER</a>
-                    </div> -->
+                    </div>
                 </div>
             </td>
             <td>
@@ -101,14 +112,14 @@
                     <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton">
                       MEMBER
                     </button>
-                    <!-- <div *dropdownMenu class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <div *dropdownMenu class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item">ARIA COORDINATOR (FULL ACCESS)</a>
                         <a class="dropdown-item">ARIA INQUIRE</a>
                         <a class="dropdown-item">CISD DEVELOPMENT</a>
                         <a class="dropdown-item">KIOSK APPS</a>
                         <a class="dropdown-item">MEMBER</a>
                         <a class="dropdown-item">STORE DEPARTMENT MANAGER</a>
-                    </div> -->
+                    </div>
                 </div>
             </td>
             <td>
@@ -116,4 +127,4 @@
             </td>
         </tr>
     </tbody>
-</table>
+</table> -->
