--- a/src/app/aria-users/aria-users.component.html
+++ b/src/app/aria-users/aria-users.component.html
@@ -1,6 +1,6 @@
 <div class='container'>
     <h2>Store: </h2>
-    <mat-form-field>
+    <mat-form-field class='dropdown'>
         <mat-select placeholder="Select Store">
             <mat-option *ngFor='let store of stores' [value]='store.value'>
                 {{store.viewValue}}
