--- a/src/app/aria-users/aria-users.component.html
+++ b/src/app/aria-users/aria-users.component.html
@@ -1,30 +1,31 @@
-<div class='container'>
-    <h2>Store: </h2>
-    <mat-form-field class='dropdown'>
-        <mat-select placeholder="Select Store">
-            <mat-option *ngFor='let store of stores' [value]='store.value'>
-                {{store.viewValue}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
+<div>
+    <mat-card class='container'>
+        <mat-card-title>
+            Store:
+        </mat-card-title>
+        <mat-form-field class='dropdown'>
+            <mat-select placeholder="Select Store">
+                <mat-option *ngFor='let store of stores' [value]='store.value'>
+                    {{store.viewValue}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+    </mat-card>
 </div>
-<table mat-table class='table' [dataSource]='dataSource' class='mat-elevation-z8'>
-    <ng-container matColumnDef='userID'>
-        <th mat-header-cell *matHeaderCellDef>User ID</th>
-        <td mat-cell *matCellDef='let element'>{{element.userID}}</td>
-    </ng-container>
-    <ng-container matColumnDef='userName'>
-        <th mat-header-cell *matHeaderCellDef>User Name</th>
-        <td mat-cell *matCellDef='let element'>{{element.userName}}</td>
-    </ng-container>
-    <ng-container matColumnDef='roles'>
-        <th mat-header-cell *matHeaderCellDef>Roles</th>
-        <td mat-cell *matCellDef='let element'>{{element.roles}}</td>
-    </ng-container>
-    <ng-container matColumnDef='function'>
-        <th mat-header-cell *matHeaderCellDef>Function</th>
-        <td mat-cell *matCellDef='let element'>{{element.function}}</td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
-    <tr mat-row *matRowDef='let row; columns: displayedColumns;'></tr>
-</table>
+<div class='container'>
+    <table class='table'>
+        <thead>
+            <tr *ngFor='let column of displayedColumns'>
+                <th>{{column.userID}}</th>
+                <th>{{column.userName}}</th>
+                <th>{{column.roles}}</th>
+                <th>{{column.function}}</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
