--- a/src/app/aria-users/aria-users.component.html
+++ b/src/app/aria-users/aria-users.component.html
@@ -1,30 +1,27 @@
-<div>
-    <mat-card class='container'>
-        <mat-card-title>
-            Store:
-        </mat-card-title>
-        <mat-form-field class='dropdown'>
-            <mat-select placeholder="Select Store">
-                <mat-option *ngFor='let store of stores' [value]='store.value'>
-                    {{store.viewValue}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-    </mat-card>
-</div>
+<mat-card class='container'>
+    <h4>Store:</h4>
+    <div class='dropdown'>
+        <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Select Store
+    </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class='dropdown-item' *ngFor='let store of stores'>
+        {{store.viewValue}}
+      </a>
+        </div>
+    </div>
+</mat-card>
+
 <div class='container'>
     <table class='table'>
         <thead>
-            <tr *ngFor='let column of displayedColumns'>
-                <th>{{column.userID}}</th>
-                <th>{{column.userName}}</th>
-                <th>{{column.roles}}</th>
-                <th>{{column.function}}</th>
+            <tr>
+                <th *ngFor='let column of displayedColumns' scope="col">{{column}}</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td></td>
+                <td *ngFor='let users of userInfo'>{{users}}</td>
             </tr>
         </tbody>
     </table>
