select store formatted

--- a/src/app/aria-users/aria-users.component.css
+++ b/src/app/aria-users/aria-users.component.css
@@ -1,7 +1,13 @@
+.header {
+    text-align: center;
+}
+
 .container {
     display: inline-flex;
+    width: 100%;
 }
 
 .dropdown {
     padding-left: 10px;
+    display: inline-flex;
 }
